[package]
name = "lwd-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
prost = "0.13"
http = "1"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[lib]
path = "src/lib.rs"
