[package]
name = "ssctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bench = { path = "../bench" }
lwd-client = { path = "../lwd-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "ssctl"
path = "src/main.rs"
